# cdp-agent-kit

./: .gitignore  EXPERIMENTS.md  README.md  TUTORIAL.md  pyproject.toml
cdp_agent_kit/: __init__.py  bridge.py  tools.py
contrib/cli-anything-harness/agent-harness/: HARNESS.md  SKILL.md  setup.py
contrib/cli-anything-harness/agent-harness/cli_anything/browser_cdp/: README.md  __init__.py  __main__.py  browser_cdp_cli.py
contrib/cli-anything-harness/agent-harness/cli_anything/browser_cdp/core/: __init__.py
examples/: README_REDDIT.md  cdp_reddit_post.py  google_forms.py
scripts/: cdp_launcher.vbs  start_chrome.sh
