[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cdp-agent-kit"
version = "0.1.0"
description = "Let AI agents control your browser via Chrome DevTools Protocol"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "playwright>=1.40",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[project.urls]
Homepage = "https://github.com/Uname58/cdp-agent-kit"
Issues = "https://github.com/Uname58/cdp-agent-kit/issues"

[tool.hatch.build.targets.wheel]
packages = ["cdp_agent_kit"]
